--- a/css/goods.css
+++ b/css/goods.css
@@ -77,7 +77,7 @@ header  .iconfont{
 .details .fourth > img{
     width: 0.5rem;
     height: 0.23rem;
-    background-image: linear-gradient(90deg, #ff4d3b 0%, #ff933b 100%),
+    background-image: linear-gradient(90deg, #ff4d3b 0%, #ff933b 100%);
     box-shadow: 0 0.04rem 0.1rem 0 rgba(255, 142, 81, 0.75);
     float: left;
     text-align:center;
