--- a/css/goods.css
+++ b/css/goods.css
@@ -21,168 +21,330 @@ header  .iconfont{
     height: 3.6rem;
     margin: 1.7rem 2.24rem 1.6rem;
 }
-.neirong{
-    height: auto;
+.detail{
+    width: 100%;
+    height: 1.56rem;
+    padding: 0 0.22rem;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
 }
-.details{
-    height: auto;
-    /*position: fixed;*/
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
-    overflow: hidden;
-}
-.details > .first > h3{
+.detail h1{
     font-size: 0.3rem;
-    font-family: PingFangSC-Semibold;
     color: #000000;
     opacity: 0.6;
+    font-weight: normal;
 }
-.details > .second > p{
-    font-family: PingFangSC-Semibold;
+.detail > p{
     font-size: 0.22rem;
-    line-height: 0.32rem;
-    color: #000000;
-    opacity: 0.3;
+    color: rgba(0,0,0,0.3);
+    margin-top: 0.15rem;
 }
-.details > .third{
-    overflow: hidden;
+.detail .tag{
+    display: flex;
+    margin-top: 0.23rem;
 }
-.details > .third span:nth-child(1){
-    font-family: PingFangSC-Semibold;
+.detail .tag .tatal{
     font-size: 0.26rem;
     color: #fbb548;
 }
-.details > .third span:nth-child(2){
-    font-family: PingFangSC-Semibold;
-    font-size: 0.2rem;
-    line-height: 0.4rem;
+.detail .tag .ding{
+    width: 0.78rem;
+    height: 0.36rem;
+    background: rgba(59,171,255,0.1);
+    padding: 0.08rem 0.2rem;
+    border-radius: 0.28rem;
     color: #41b2fc;
-}
-.details > .third span:nth-child(3){
-    font-family: PingFangSC-Semibold;
     font-size: 0.2rem;
-    color: #36d681;
+    text-align: center;
+    margin-left: 0.23rem;
 }
-.details > .third span:nth-child(4){
-    font-family: PingFangSC-Semibold;
+.detail .tag .shang{
+    width: 1.13rem;
+    height: 0.36rem;
+    background: rgba(59,171,255,0.1);
+    padding: 0.08rem 0.2rem;
+    border-radius: 0.28rem;
+    color: #36d681;
+    font-size: 0.2rem;
+    text-align: center;
+    margin-left: 0.3rem;
+}
+.sell{
     font-size: 0.2rem;
     color: #000000;
     opacity: 0.3;
-    float: right;
-    line-height: 0.4rem;
+    position: absolute;
+    right: 0.13rem;
+    bottom: -0.1rem;
 }
-.details .fourth {
-    overflow: hidden;
+.sell b{
+    color: #36a8fe;
+    font-size: 0.24rem;
 }
-.details .fourth > img{
-    width: 0.5rem;
+.quan{
+    display: flex;
+    /*margin-left: 0.53rem;*/
+    margin-top: 0.39rem;
+}
+.quan img{
+    width: 0.49rem;
     height: 0.23rem;
-    background-image: linear-gradient(90deg, #ff4d3b 0%, #ff933b 100%);
-    box-shadow: 0 0.04rem 0.1rem 0 rgba(255, 142, 81, 0.75);
-    float: left;
-    text-align:center;
+    margin-top: 0.1rem;
 }
-.details > .fourth span:nth-child(2) {
-    font-family: MicrosoftYaHei-Bold;
+.quan > a > b{
     font-size: 0.24rem;
     line-height: 0.4rem;
     color: #ff844e;
-    margin: 0 0.1rem;
+    margin-top: 0.43rem;
 }
-.details .fourth span:nth-child(3) {
-    background-image: linear-gradient(270deg, #ffca3b 0%, #ff933b 100%),
-    linear-gradient(#ffc471, #ffc471);
-    box-shadow: 0 0.04rem 0.16rem 0 rgba(255, 142, 81, 0.3);
+.quan .manjian{
+    width: 1.84rem;
+    height: 0.39rem;
     border-radius: 0.2rem;
-    font-family: MicrosoftYaHei-Bold;
+    background: #ff933b;
+    color: white;
     font-size: 0.24rem;
-    line-height: 0.4rem;
-    color: #fbfeff;
+    text-align: center;
+    margin-left: 0.14rem;
+    line-height: 0.39rem;
 }
-.details .fifth span{
-    font-family: PingFangSC-Semibold;
+.bao{
+    display: flex;
     font-size: 0.24rem;
-    line-height: 0.4rem;
     color: #41b2fc;
-    margin-right: 0.8rem;
+    margin-top: 0.5rem;
+    padding-left: 0.14rem;
 }
-.details .sixth span:nth-child(1){
-    font-family: MicrosoftYaHei-Bold;
+.bao span{
+    margin-right: 0.98rem;
+    position: relative;
+
+}
+.bao span::before{
+    position: absolute;
+    top: 0.15rem;
+    left: -0.2rem;
+    content: "";
+    width: 0.06rem;
+    height: 0.06rem;
+    border-radius: 50%;
+    background: #36d681;
+}
+.assess{
+    width: 100%;
+    /*height: 5.24rem;*/
+    padding: 0 0.22rem;
+    box-sizing: border-box;
+}
+.assess .title{
+    width: 100%;
+    height: 0.8rem;
+    display: flex;
+    justify-content: space-between;
+}
+.assess .title h1{
     font-size: 0.32rem;
-    line-height: 0.4rem;
     color: #41b2fc;
-    float: left;
+    margin-top: 0.44rem;
+    position: relative;
 }
-.details .sixth span:nth-child(2){
-    font-family: PingFangSC-Semibold;
+.assess .title h1 b{
+    color: black;
+}
+.assess .title h1::before{
+    content: " ";
+    width: 0.1rem;
+    height: 0.05rem;
+    background: #44b5ff;
+    position: absolute;
+    top: 0.2rem;
+    left: -0.2rem;
+}
+.assess .title p{
     font-size: 0.22rem;
     color: #3bacfe;
-    float: right;
+    margin-top:0.5rem;
 }
-/*.details > .dian::before{*/
-/*    width: 0.05rem;*/
-/*    height: 0.05rem;*/
-/*    background-color: #36d681;*/
-/*    box-shadow: 0 0.02rem 0.05rem 0 rgba(54, 214, 129, 0.43);*/
-/*    border-radius: 0.03rem;*/
-/*}*/
-.zong{
-    height: auto;
+.assess .title p > span{
+    color: #36a8fe;
+    width: 0.11rem;
+    height: 0.18rem;
+    display: inline-block;
 }
-.comment ul > li{
+.assess .nav{
+    width: 100%;
+    height: 2.34rem;
+
     display: flex;
+    /*margin-top: 0.2rem;*/
 }
-.comment ul > li > .headimg {
+.assess .nav .navleft{
+    width: 0.85rem;
+    height: 100%;
+    flex: 0 1 auto;
+}
+.assess .nav .navleft img{
     width: 0.85rem;
     height: 0.85rem;
     border-radius: 50%;
-    overflow: hidden;
-    background-color: #ffffff;
-    box-shadow: 0 0.01rem 0.21rem 0 rgba(223, 223, 223, 0.43);
-    border: solid 0.04rem #fefefe;
+    margin-top: 0.43rem;
 }
-.comment ul > li > .headimg >img{
-    width:1.47rem;
-    height: 2.1rem;
+.assess .nav .navright{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
 }
-.comment ul > li > .luansile{
-    overflow: hidden;
-    flex-grow: 1;
-    margin-left: 0.2rem;
-}
-.comment ul > li > .luansile > div:nth-child(1){
-    overflow: hidden;
-    padding-right: 0.25rem;
-}
-.comment ul > li >.luansile > div > span:nth-child(1) {
-    font-family: PingFangSC-Semibold;
+.navright .user{
     font-size: 0.2rem;
     color: #cfcfcf;
-    float: left;
-    display: inline-block;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.7rem;
+    margin-left: 0.24rem;
 }
-.comment ul > li >.luansile > div > span:nth-child(2) {
-    font-family: SanFranciscoDisplay-Semibold;
-    font-size: 0.22rem;
+.navright .user > h1 > span{
+    color: #e6e6e6;
+}
+.navright .user > span{
     color: #9ed5ff;
-    float: right;
-    display: inline-block;
 }
-
-.comment ul > li >.luansile div:nth-child(2) {
-    font-family: PingFangSC-Semibold;
+.navright > p{
+    font-size: 0.26rem;
+    color: #000000;
+    opacity: 0.6;
+    margin-top: 0.22rem;
+    margin-left: 0.24rem;
+}
+.navright .area{
+    font-size: 0.22rem;
+    color: #000000;
+    opacity: 0.3;
+    margin-top: 0.22rem;
+    margin-left: 0.24rem;
+}
+.navright a img{
+    position: relative;
+    /*bottom: -1.3rem;*/
+    /*left: 0;*/
+    width: 1.8rem;
+    height: 1.01rem;
+    margin: 0.22rem 0.22rem;
+}
+.detail2{
+    width: 100%;
+    height: 3.5rem;
+    font-size: 0.32rem;
+    color: #35db82;
+    margin:1.5rem 0.1rem;
+    position: relative;
+}
+.detail2::before{
+    content: "";
+    width: 0.1rem;
+    height: 0.05rem;
+    background: #35db82;
+    position: absolute;
+    top:0.2rem;
+    left: -0.2rem;
+}
+.detail2 b{
+    color: #4f5b64;
+}
+.detail2 img{
+    width: 3rem;
+    height: 3rem;
+    position: absolute;
+    top: 1.2rem;
+    left: 1.5rem;
+}
+.tui{
+    width: 100%;
+    height: 3.5rem;
+    position: relative;
+    margin-left: 0.22rem;
+}
+.tui .title{
+    font-size: 0.32rem;
+    color: #35db82;
+}
+.tui::before{
+    content: "";
+    width: 0.1rem;
+    height: 0.05rem;
+    background: #35db82;
+    position: absolute;
+    top:0.2rem;
+    left: -0.2rem;
+}
+.tui .list{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+.tui .list > li{
+    width: 1.86rem;
+    height: 2.6rem;
+    margin-top: 0.22rem;
+    display: flex;
+    flex-direction: column;
+}
+.tui .list > li a img{
+    width: 1.31rem;
+    height: 1.37rem;
+}
+.tui .list > li a p{
     font-size: 0.26rem;
     color: #000000;
     opacity: 0.6;
 }
-
-.comment ul > li >.luansile div:nth-child(3) {
-    font-family: PingFangSC-Semibold;
-    font-size: 0.22rem;
-    line-height: 0.32rem;
-    color: #000000;
-    opacity: 0.3;
+.tui .list > li a h1{
+    font-size: 0.28rem;
+    color: #fbb548;
+    display: inline-block;
+}
+footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1.08rem;
+    background: white;
+}
+footer a{
+    display: flex;
+}
+footer a div{
+    margin-left: 0.54rem;
+    margin-top: 0.2rem;
+}
+footer a div img{
+    width: 0.49rem;
+    height: 0.41rem;
+}
+footer a div p{
+    font-size: 0.2rem;
+    color: #3bacfe;
+    text-align: center;
+}
+footer a span{
+    width: 1.96rem;
+    height: 0.6rem;
+    color: white;
+    background: #37e06f;
+    margin-left: 0.3rem;
+    margin-top: 0.22rem;
+    border-radius: 0.3rem;
+    text-align: center;
+    line-height: 0.6rem;
+}
+footer a > .a{
+    background:#3bacfe;
 }
 
 
