--- a/css/goods.css
+++ b/css/goods.css
@@ -310,43 +310,79 @@ header  .iconfont{
 }
 footer{
     position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 1.08rem;
-    background: white;
-}
-footer a{
     display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    left: 0;
+    bottom: 0;
+    height: 1rem;
+    width: 100%;
+    padding: 0 0.42rem;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    background: #f8fcff;
+    justify-content: space-between;
 }
-footer a div{
-    margin-left: 0.54rem;
-    margin-top: 0.2rem;
-}
-footer a div img{
-    width: 0.49rem;
-    height: 0.41rem;
-}
-footer a div p{
-    font-size: 0.2rem;
-    color: #3bacfe;
+footer>a{
+    width: 0.7rem;
+    height: 100%;
     text-align: center;
+    font-size: 0.24rem;
+    color:#59c3fe;
+    opacity: 0.5;
 }
-footer a span{
-    width: 1.96rem;
-    height: 0.6rem;
-    color: white;
-    background: #37e06f;
+footer>a>img{
+    width: 0.5rem;
+    height: 0.46rem;
+    margin-top: 0.12rem;
+}
+
+.footer-right{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content:space-between;
+    align-items: center;
+}
+.footer-right>a{
     margin-left: 0.3rem;
-    margin-top: 0.22rem;
-    border-radius: 0.3rem;
+    font-size: 0.22rem;
+    color: #ffffff;
+}
+.footer-right>a>div{
+    padding: 0.16rem 0.38rem;
+    border-radius: 0.31rem;
+}
+.footer-right-first{
+    background-image: linear-gradient(90deg,#37e06f,#32d798);
+    box-shadow: 0 0 0.3rem 0 #37df72;
+}
+.footer-right-second{
+    background: #3bacfe;
+    box-shadow: 0 0 0.3rem 0 #3bacfe;
+}
+.footer-left{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content:space-between;
+    align-items: center;
+}
+.footer-left>a{
+    font-size: 0.2rem;
     text-align: center;
-    line-height: 0.6rem;
 }
-footer a > .a{
-    background:#3bacfe;
+.footer-left>a>img{
+    width: 0.5rem;
+    height: 0.5rem;
+    display: block;
+    margin: 0 auto;
 }
-
-
-
-
+.footer-left-first{
+    color: #3bacfe;
+    text-shadow: 0 0 0.06rem #3bacfe;
+}.footer-left-second{
+     color:#37df72;
+     text-shadow: 0 0 0.06rem #37df72;
+     margin-left: 0.58rem;
+ }
